istio/envoy/demos/envoy-server/deploy/envoy-server.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 8081}
static_resources:
  listeners:
    - name: listener_ingress
      address:
        socket_address: { address: 0.0.0.0, port_value: 80}
      filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                      - match: { prefix: "/api/hello" }
                        route: { cluster: cluster_server }
                      - match: { prefix: "/api/hi" }
                        route: { cluster: cluster_server }
              http_filters:
                - name: envoy.router
  clusters:
    - name: cluster_server
      connect_timeout: 0.5s
      type: STATIC
      lb_policy: ROUND_ROBIN
      hosts:
        - { socket_address: { address: 127.0.0.1, port_value: 8080 }}
